{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 380,
  "lineage": "7050b067-e4c5-5f1e-51ca-fb4f2f342cab",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-08-17T11:59:19.945-07:00",
            "deny": [],
            "description": "Allow incoming HTTP traffic on port 80",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/constant-jigsaw-414207/global/firewalls/allow-http",
            "log_config": [],
            "name": "allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/constant-jigsaw-414207/global/networks/vpc-kly",
            "params": [],
            "priority": 1000,
            "project": "constant-jigsaw-414207",
            "self_link": "https://www.googleapis.com/compute/v1/projects/constant-jigsaw-414207/global/firewalls/allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "allow-http"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-08-17T11:59:20.946-07:00",
            "deny": [],
            "description": "Allow incoming HTTPS traffic on port 443",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/constant-jigsaw-414207/global/firewalls/allow-https",
            "log_config": [],
            "name": "allow-https",
            "network": "https://www.googleapis.com/compute/v1/projects/constant-jigsaw-414207/global/networks/vpc-kly",
            "params": [],
            "priority": 1000,
            "project": "constant-jigsaw-414207",
            "self_link": "https://www.googleapis.com/compute/v1/projects/constant-jigsaw-414207/global/firewalls/allow-https",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "allow-https"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-icmp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2025-08-17T11:59:20.043-07:00",
            "deny": [],
            "description": "Allow incoming ICMP traffic",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/constant-jigsaw-414207/global/firewalls/allow-icmp",
            "log_config": [],
            "name": "allow-icmp",
            "network": "https://www.googleapis.com/compute/v1/projects/constant-jigsaw-414207/global/networks/vpc-kly",
            "params": [],
            "priority": 1000,
            "project": "constant-jigsaw-414207",
            "self_link": "https://www.googleapis.com/compute/v1/projects/constant-jigsaw-414207/global/firewalls/allow-icmp",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "allow-icmp"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-08-17T11:59:19.953-07:00",
            "deny": [],
            "description": "Allow incoming SSH traffic on port 22",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/constant-jigsaw-414207/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/constant-jigsaw-414207/global/networks/vpc-kly",
            "params": [],
            "priority": 1000,
            "project": "constant-jigsaw-414207",
            "self_link": "https://www.googleapis.com/compute/v1/projects/constant-jigsaw-414207/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "allow-ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8000",
                  "5173"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-08-17T11:59:19.937-07:00",
            "deny": [],
            "description": "Allow incoming traffic for Dependencies",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/constant-jigsaw-414207/global/firewalls/allow-port",
            "log_config": [],
            "name": "allow-port",
            "network": "https://www.googleapis.com/compute/v1/projects/constant-jigsaw-414207/global/networks/vpc-kly",
            "params": [],
            "priority": 1000,
            "project": "constant-jigsaw-414207",
            "self_link": "https://www.googleapis.com/compute/v1/projects/constant-jigsaw-414207/global/firewalls/allow-port",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "allow-port"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "UEFI_COMPATIBLE",
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "GVNIC",
                  "SEV_CAPABLE",
                  "SEV_LIVE_MIGRATABLE_V2"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20250709",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/constant-jigsaw-414207/zones/asia-southeast2-a/disks/vm-kly"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "AMD Rome",
            "creation_timestamp": "2025-08-17T11:59:43.414-07:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/constant-jigsaw-414207/zones/asia-southeast2-a/instances/vm-kly",
            "instance_id": "407194934581368944",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-medium",
            "metadata": {
              "ssh-keys": "haydar:ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIEmTjqdNTBWF3IbluPb8bHCtfyWHUyD69j9gL3qn1Fkk dr.stranger157@gmail.com\n",
              "startup-script": "#!/bin/bash\napt-get update\napt-get install -y ansible\n"
            },
            "metadata_fingerprint": "eKXLKcyZPj4=",
            "name": "vm-kly",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.128.91.21",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/constant-jigsaw-414207/global/networks/vpc-kly",
                "network_ip": "10.10.10.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/constant-jigsaw-414207/regions/asia-southeast2/subnetworks/kly-subnet",
                "subnetwork_project": "constant-jigsaw-414207"
              }
            ],
            "project": "constant-jigsaw-414207",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/constant-jigsaw-414207/zones/asia-southeast2-a/instances/vm-kly",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "allow-http",
              "allow-https",
              "allow-port",
              "allow-ssh"
            ],
            "tags_fingerprint": "xA-YQqGbTZk=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "asia-southeast2-a"
          },
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.subnet_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/constant-jigsaw-414207/global/networks/vpc-kly",
            "mtu": 1460,
            "name": "vpc-kly",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "1219827606255278259",
            "numeric_id": "1219827606255278259",
            "project": "constant-jigsaw-414207",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/constant-jigsaw-414207/global/networks/vpc-kly"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-08-17T11:59:21.310-07:00",
            "enable_flow_logs": false,
            "gateway_address": "10.10.10.1",
            "id": "projects/constant-jigsaw-414207/regions/asia-southeast2/subnetworks/kly-subnet",
            "ip_cidr_range": "10.10.10.0/24",
            "name": "kly-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/constant-jigsaw-414207/global/networks/vpc-kly",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "constant-jigsaw-414207",
            "purpose": "PRIVATE",
            "region": "asia-southeast2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/constant-jigsaw-414207/regions/asia-southeast2/subnetworks/kly-subnet",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 3073276951357528166
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    }
  ]
}